add effect sdk and personal api key auth
